--- a/src/styles/input.css
+++ b/src/styles/input.css
@@ -1,3 +1,5 @@
+@import url("https://fonts.googleapis.com/css?family=Roboto");
+
 .automizy-input {
     display: inline-block;
     position: relative;
@@ -173,6 +175,15 @@
     margin: 0 10px 0 -26px;
     padding: 0;
     float: left;
+}
+.automizy-input-loading-box{
+    display:none;
+    position:absolute;
+    top:0;
+    left:0;
+    width:100%;
+    height:100%;
+    background:#ffffff url('') left center;
 }
 
 
@@ -373,6 +384,26 @@
 }
 
 /*Checkbox & radio*/
+
+
+.automizy-input-icon{
+    width:30px;
+    height:30px;
+    display:none;
+    position:absolute;
+    top:0;
+    right:0;
+    opacity:0.5;
+    background:transparent url('') no-repeat center center;
+    cursor:pointer;
+}
+.automizy-input-icon:hover{
+    opacity:0.7;
+}
+.automizy-input-icon.automizy-icon-add-box{
+    background-image: url('data:image/svg+xml;utf8, <svg fill="#000000" height="24" viewBox="0 0 24 24" width="24" xmlns="http://www.w3.org/2000/svg"><path d="M19 3H5c-1.11 0-2 .9-2 2v14c0 1.1.89 2 2 2h14c1.1 0 2-.9 2-2V5c0-1.1-.9-2-2-2zm-2 10h-4v4h-2v-4H7v-2h4V7h2v4h4v2z"/><path d="M0 0h24v24H0z" fill="none"/> </svg>');
+}
+
 
 .automizy-input input[type='checkbox'], .automizy-input input[type='radio'], input.automizy-table-rowcheck{
     background-image: url(../../images/checkbox-radio.png);
