--- a/src/styles/button.css
+++ b/src/styles/button.css
@@ -78,7 +78,9 @@
 .automizy-button.automizy-skin-image-white.automizy-button-thin a,
 .automizy-button.automizy-skin-simple-orange.automizy-button-thin a,
 .automizy-button.automizy-skin-simple-green.automizy-button-thin a{
-    padding:6px 10px 6px 10px;
+    padding: 6px 10px 6px 10px;
+    height: auto;
+    line-height: normal;
 }
 .automizy-button.disabled a{
     cursor:default !important;
