--- a/src/automizy.css
+++ b/src/automizy.css
@@ -9,3 +9,4 @@
 @import url("styles/mobile.css");
 @import url("styles/iphoneStyle.css");
 @import url("styles/select.css");
+@import url("styles/icons.css");
