--- a/src/styles/select.css
+++ b/src/styles/select.css
@@ -12,6 +12,8 @@
     display:inline-block;
     cursor:pointer;
     min-width:180px;
+    vertical-align: middle;
+    overflow: hidden;
 }
 .automizy-select.automizy-active{
      color: #333333;
@@ -82,6 +84,8 @@
     width:100%;
     height:100%;
     background-color:#ffffff;
+    padding: 6px 0 0 6px;
+    box-sizing: border-box;
 }
 .automizy-select.automizy-loading .automizy-select-loading-box{
     display:block;
