--- a/src/styles/table.css
+++ b/src/styles/table.css
@@ -1,7 +1,6 @@
-@import url("https://fonts.googleapis.com/css?family=Roboto");
+
 
 .automizy-table-box{
-    font-family: Roboto;
     width:100%;
     max-width:100%;
     min-width:100%;
@@ -21,6 +20,7 @@
     background: #FFF;
     color: #3e4855;
     position: relative;
+    height: 45px;
     top: -1px;
     border-top-left-radius: 3px;
     border-top-right-radius: 3px;
@@ -242,7 +242,6 @@
     color:#918D99;
 }
 .automizy-table > tbody > tr > td.automizy-main-cell{
-    font-weight:bold;
 }
 .automizy-table > tbody > tr > th{
     padding:10px 36px;
@@ -271,7 +270,6 @@
     width:100%;
 }
 .automizy-table.checkboxed > tbody > tr > td:nth-child(2){
-   font-weight:bold;
 }
 .automizy-table-clickable > tbody > tr > *{
     cursor:pointer;
@@ -348,7 +346,6 @@
     box-sizing: border-box;
     border-radius: 0;
     text-indent: 0px;
-    font-family: 'Roboto', sans-serif;
     font-style: normal;
     position: relative;
     vertical-align: middle;
