input icons update

--- a/src/styles/input.css
+++ b/src/styles/input.css
@@ -65,10 +65,6 @@
     filter: alpha(opacity:65);
 }
 
-.automizy-input.automizy-skin-simple-automizy.error input {
-    border-color: red;
-}
-
 .automizy-input label.automizy-hide{
     display:none!important;
 }
@@ -138,7 +134,8 @@
 /*Validation*/
 
 .automizy-input.automizy-skin-simple-automizy.error input,
-.automizy-input.automizy-skin-simple-automizy.error textarea{
+.automizy-input.automizy-skin-simple-automizy.error textarea,
+.automizy-input.automizy-skin-simple-automizy.error .automizy-input-icon{
     border-color:#da4b50 !important;
 }
 
@@ -162,7 +159,8 @@
 
 
 .automizy-input.automizy-skin-simple-automizy.valid input,
-.automizy-input.automizy-skin-simple-automizy.valid textarea{
+.automizy-input.automizy-skin-simple-automizy.valid textarea,
+.automizy-input.automizy-skin-simple-automizy.valid .automizy-input-icon{
     border-color:#4CAF50 !important;
 }
 
@@ -283,6 +281,20 @@
 
 .automizy-skin-simple-automizy .simple-automizy-file-box td {
     vertical-align: top;
+}
+
+.automizy-skin-simple-automizy .simple-automizy-file-box .automizy-input-box{
+    padding: 0;
+}
+.automizy-skin-simple-automizy .simple-automizy-file-box .automizy-input-box input{
+    border-right: none;
+    border-bottom-right-radius: 0;
+    border-top-right-radius: 0;
+}
+
+.automizy-skin-simple-automizy .simple-automizy-file-box .automizy-button a{
+    border-top-left-radius: 0;
+    border-bottom-left-radius: 0;
 }
 
 
@@ -419,6 +431,8 @@
     height:34px;
     display:none;
     position:absolute;
+    padding: 6px 0;
+    text-align: center;
     top:0;
     left: auto;
     right: auto;
@@ -438,20 +452,32 @@
 .automizy-input .automizy-input-box.automizy-icon-right .automizy-input-icon{
     right:10px;
     border-left: none;
+    border-bottom-left-radius: 0;
+    border-top-left-radius: 0;
 }
 .automizy-input .automizy-input-box.automizy-icon-left .automizy-input-icon{
     border-right: none;
+    border-top-right-radius: 0;
+    border-bottom-right-radius: 0;
 }
 
 
 .automizy-input-icon::before{
-    width:33px;
-    height:32px;
     content: "";
-    display: block;
+    display: inline-block;
+    vertical-align: middle;
     opacity: 0.7;
     background-position: center;
     background-repeat: no-repeat;
+    text-align: center;
+}
+
+/*If it's automizy input icon, before will contain no value, so height has to be set*/
+.automizy-input-icon[class*="automizy-icon"]::before{
+    width:33px;
+    height:32px;
+    position: absolute;
+    top: 0;
 }
 
 .automizy-input-box.automizy-icon-clickable .automizy-input-icon::before{
