--- a/src/styles/input.css
+++ b/src/styles/input.css
@@ -70,7 +70,7 @@
 }
 
 .automizy-input.automizy-skin-simple-automizy label {
-    width: 240px;
+    width: 25%;
     vertical-align: top;
     padding-top: 7px;
     font-weight: 700;
@@ -84,6 +84,20 @@
     padding-left: 10px;
     box-sizing: border-box;
 }
+
+.automizy-input.automizy-skin-simple-automizy[type="checkbox"] label{
+    padding-top: 5px;
+    min-width: 25%;
+    width:auto;
+}
+
+.automizy-input.automizy-skin-simple-automizy label.automizy-input-label-after {
+    width: auto;
+    padding-top:5px;
+    text-align: left;
+}
+
+
 
 /*
 .automizy-input.automizy-skin-simple-automizy .automizy-input-help{
@@ -108,17 +122,25 @@
 }
 
 
-.automizy-input .automizy-input-box {
+.automizy-input .automizy-input-box,
+.automizy-input label:empty+.automizy-input-box{
     display: inline-block;
     position: relative;
     max-width: 100%;
-    padding-right: 10px;
+    width: 100%;
     box-sizing: border-box;
 }
 
+.automizy-input label+.automizy-input-box{
+    width: 75%;
+}
+
 .automizy-input .automizy-input-box.automizy-input-has-help {
-    width: calc(100% - 25px) !important;
-    max-width: 300px !important;
+    max-width: calc(100% - 30px);
+}
+
+.automizy-input label+.automizy-input-box.automizy-input-has-help{
+    max-width: calc(75% - 30px);
 }
 
 .automizy-input .automizy-input-box.new-row {
@@ -279,6 +301,10 @@
     height: 33px;
 }
 
+.automizy-skin-simple-automizy .simple-automizy-file-box table{
+    width: 100%;
+}
+
 .automizy-skin-simple-automizy .simple-automizy-file-box td {
     vertical-align: top;
 }
@@ -432,10 +458,10 @@
     display:none;
     position:absolute;
     padding: 6px 0;
-    text-align: center;
     top:0;
     left: auto;
     right: auto;
+    text-align: left;
     box-sizing: border-box;
     background:transparent url('') no-repeat center center;
     background-color: rgba(239, 244, 246, 0.36);
@@ -450,7 +476,7 @@
 
 
 .automizy-input .automizy-input-box.automizy-icon-right .automizy-input-icon{
-    right:10px;
+    right:0px;
     border-left: none;
     border-bottom-left-radius: 0;
     border-top-left-radius: 0;
@@ -465,7 +491,6 @@
 .automizy-input-icon::before{
     content: "";
     display: inline-block;
-    vertical-align: middle;
     opacity: 0.7;
     background-position: center;
     background-repeat: no-repeat;
@@ -477,6 +502,7 @@
     width:33px;
     height:32px;
     position: absolute;
+    vertical-align: middle;
     top: 0;
 }
 
