--- a/src/styles/form.css
+++ b/src/styles/form.css
@@ -16,6 +16,7 @@
 }
 .automizy-form .automizy-form-buttons{
     text-align:center;
+    height:30px;
 }
 .automizy-form .automizy-form-buttons .automizy-button{
     margin-left:4px;
