--- a/src/styles/select.css
+++ b/src/styles/select.css
@@ -12,8 +12,25 @@
     cursor:pointer;
     min-width:180px;
     vertical-align: middle;
-    position: relative;
-    /*overflow: hidden;*/
+    overflow: hidden;
+    box-sizing: border-box;
+    -webkit-border-radius: 3px;
+    -moz-border-radius: 3px;
+    border-radius: 3px;
+    outline: none;
+    max-width: 100%;
+    font-size: 13px;
+    float: none;
+    background: #fff;
+    width: 100%;
+    height: 34px;
+    color: #2b2f33;
+    border: 1px solid #dfe8f1;
+    -webkit-box-shadow: inset 1px 1px 3px #f6f6f6;
+    -moz-box-shadow: inset 1px 1px 3px #f6f6f6;
+    box-shadow: inset 1px 1px 3px #f6f6f6;
+    line-height: normal;
+    position:relative;
 }
 .automizy-select.automizy-active{
      color: #333333;
@@ -78,7 +95,6 @@
 .automizy-select.automizy-empty .automizy-select-td-content{
     color: #777777;
 }
-
 .automizy-select .automizy-select-loading-box{
     display:none;
     width:100%;
@@ -90,32 +106,12 @@
 .automizy-select.automizy-loading .automizy-select-loading-box{
     display:block;
 }
-
-.automizy-select .automizy-select-empty-box{
-    display:none;
-    color: #ff0000;
-    padding: 6px 0 0 6px;
-}
-.automizy-select.automizy-empty-select{
-    border:none;
-    background-color:transparent;
-    cursor:auto;
-}
-.automizy-select.automizy-empty-select .automizy-select-table{
-    display:none;
-}
-.automizy-select.automizy-empty-select .automizy-select-empty-box{
-    display:block;
-}
-
-
-
 .automizy-select.automizy-loading .automizy-select-table{
     display:none;
 }
 
 
-.automizy-select-option-box-widget{   /*option box widget*/
+.automizy-select-option-box{   /*option box*/
     position:absolute;
     z-index:16777270;
     border:1px solid rgba(0,0,0,0.15);
@@ -126,8 +122,6 @@
     background-color:#ffffff;
     margin:1px 0 0 0;
     box-sizing: border-box;
-}
-.automizy-select-option-box{   /*option box*/
     overflow: auto;
     max-height: 250px;
 }
