--- a/src/styles/select.css
+++ b/src/styles/select.css
@@ -1,26 +1,36 @@
 .automizy-select{   /*select field*/
-    color: #333333;
-    font-size:14px;
-    height:30px;
     border:1px solid rgba(0,0,0,0.15);
-    -webkit-border-radius: 4px;
-    -moz-border-radius: 4px;
-    border-radius: 4px;
-    background-color:#ffffff;
     box-sizing: border-box;
     display:inline-block;
     cursor:pointer;
     min-width:180px;
     vertical-align: middle;
     overflow: hidden;
+    box-sizing: border-box;
+    -webkit-border-radius: 3px;
+    -moz-border-radius: 3px;
+    border-radius: 3px;
+    outline: none;
+    max-width: 100%;
+    font-size: 13px;
+    float: none;
+    background: #fff;
+    width: 100%;
+    height: 34px;
+    color: #2b2f33;
+    border: 1px solid #dfe8f1;
+    -webkit-box-shadow: inset 1px 1px 3px #f6f6f6;
+    -moz-box-shadow: inset 1px 1px 3px #f6f6f6;
+    box-shadow: inset 1px 1px 3px #f6f6f6;
+    line-height: normal;
 }
 .automizy-select.automizy-active{
-     color: #333333;
-     background-color: #e6e6e6;
-     border-color: #adadad;
+     border-color: #3da6ff;
 }
 .automizy-select .automizy-select-table{
     width:100%;
+    height:100%;
+    max-height: 34px;
 }
 .automizy-select .automizy-select-tr{
 
@@ -33,6 +43,8 @@
     margin:0;
     width:0px;
 }
+
+
 .automizy-select.automizy-has-icon .automizy-select-td-icon{
     padding:0 6px 0 14px;
 }
@@ -106,15 +118,17 @@
     box-sizing: border-box;
     overflow: auto;
     max-height: 250px;
+    padding: 5px 10px;
 }
 .automizy-select-option-table{  /*option box content table*/
     width:100%;
 }
 .automizy-select-option-table .automizy-select-option-tr{   /*option row*/
-
+    color:#555;
 }
 .automizy-select-option-table .automizy-select-option-tr:hover{
-    background-color:#f5f5f5;
+    background-color: rgb( 244, 106, 31 );
+    color:#FFFFFF;
     cursor:pointer;
 }
 .automizy-select-option-table .automizy-select-option-tr.automizy-selected{   /*active option row*/
@@ -122,7 +136,8 @@
 }
 .automizy-select-option-table .automizy-select-option-tr.automizy-disabled{   /*disabled option row*/
     background-color:transparent;
-    color:#777777;
+    opacity: 0.5;
+    color: inherit;
     cursor: not-allowed;
 }
 .automizy-select-option-table .automizy-select-option-tr .automizy-select-option-td-icon{
@@ -131,7 +146,17 @@
     vertical-align:middle;
     padding:0 6px 0 14px;
     width:0px;
+    border: 1px solid transparent;
+    border-top-left-radius: 3px;
+    border-bottom-left-radius: 3px;
+    border-right: none;
 }
+
+.automizy-select-option-table .automizy-select-option-tr:hover .automizy-select-option-td-icon {
+    filter: brightness(200%);
+    -webkit-filter: brightness(200%);
+}
+
 .automizy-select-option-table .automizy-select-option-tr .automizy-select-option-td-icon .automizy-icon{
     display: none;
 }
@@ -152,6 +177,11 @@
     vertical-align:middle;
     width:0;
     max-width:0;
+    border: 1px solid transparent;
+    border-top-right-radius: 3px;
+    border-bottom-right-radius: 3px;
+    border-left: none;
+    opacity: 0.5;
 }
 .automizy-select-option-table .automizy-select-option-tr.automizy-has-select .automizy-select-option-td-check{
     width:40px;
@@ -160,6 +190,11 @@
 }
 .automizy-select-option-table .automizy-select-option-tr.automizy-selected .automizy-select-option-td-check{     /*active option row check cell*/
     background:transparent url('data:image/svg+xml;utf8,<svg fill="#000000" height="24" viewBox="0 0 24 24" width="24" xmlns="http://www.w3.org/2000/svg"><path d="M0 0h24v24H0z" fill="none"/><path d="M9 16.17L4.83 12l-1.42 1.41L9 19 21 7l-1.41-1.41z"/></svg>') no-repeat 4px center;
+}
+.automizy-select-option-table .automizy-select-option-tr:hover.automizy-has-select .automizy-select-option-td-check {
+    filter: brightness(100%);
+    -webkit-filter: invert(100%);
+    opacity: 1;
 }
 
 .automizy-select-option-table .automizy-select-group-title{
@@ -178,7 +213,6 @@
 }
 .automizy-select-option-table .automizy-select-group-separator-td{
     height: 1px;
-    margin: 9px 0;
     overflow: hidden;
     background-color: #e5e5e5;
 }
