--- a/src/styles/input.css
+++ b/src/styles/input.css
@@ -477,6 +477,12 @@
     cursor: pointer;
 }
 
+.automizy-input .automizy-input-box.automizy-icon-clickable .automizy-input-icon:active{
+    cursor: pointer;
+    -webkit-box-shadow: inset 0 3px 5px rgba(0,0,0,.125);
+    box-shadow: inset 0 3px 5px rgba(0,0,0,.125);
+}
+
 
 .automizy-input .automizy-input-box.automizy-icon-right .automizy-input-icon{
     right:0px;
@@ -497,7 +503,7 @@
 .automizy-input-icon::before{
     content: "";
     display: inline-block;
-    opacity: 0.7;
+    opacity: 0.5;
     background-position: center;
     background-repeat: no-repeat;
     text-align: center;
@@ -513,11 +519,11 @@
 }
 
 .automizy-input-box.automizy-icon-clickable .automizy-input-icon::before{
-    opacity: 0.5;
+    opacity: 0.7;
 }
 
 .automizy-input-icon:hover::before{
-    opacity:0.7;
+    opacity:0.5;
 }
 .automizy-input-icon.automizy-icon-add-box::before{
     background-image: url('data:image/svg+xml;utf8, <svg fill="#000000" height="24" viewBox="0 0 24 24" width="24" xmlns="http://www.w3.org/2000/svg"><path d="M19 3H5c-1.11 0-2 .9-2 2v14c0 1.1.89 2 2 2h14c1.1 0 2-.9 2-2V5c0-1.1-.9-2-2-2zm-2 10h-4v4h-2v-4H7v-2h4V7h2v4h4v2z"/><path d="M0 0h24v24H0z" fill="none"/> </svg>');
@@ -538,8 +544,10 @@
     -o-appearance: none;
     appearance: none;
     outline: none !important;
+    width: 15px;
+    height: 15px;
 }
-.automizy-input input, input.automizy-table-rowcheck{
+.automizy-input input[type="checkbox"].automizy-table-rowcheck{
     width: 15px;
     height: 15px;
 }
