--- a/src/styles/dialog.css
+++ b/src/styles/dialog.css
@@ -28,7 +28,9 @@
     position: absolute;
     top: 0;
     right: 0;
-    margin: 4px 9px;
+    padding: 15px;
+    font-size: 14px;
+    margin: 0;
     color: #000000;
     cursor: pointer;
     z-index: 1000;
