--- a/src/styles/core.css
+++ b/src/styles/core.css
@@ -24,6 +24,7 @@ html, body {
     width:63px;
 }
 .automizy-permission-trap,
+.automizy-force-hide,
 .automizy-hide{
     display:none !important;
     visibility: hidden !important;
