--- a/src/styles/select.css
+++ b/src/styles/select.css
@@ -13,7 +13,8 @@
     cursor:pointer;
     min-width:180px;
     vertical-align: middle;
-    overflow: hidden;
+    position: relative;
+    /*overflow: hidden;*/
 }
 .automizy-select.automizy-active{
      color: #333333;
@@ -79,6 +80,7 @@
 .automizy-select.automizy-empty .automizy-select-td-content{
     color: #777777;
 }
+
 .automizy-select .automizy-select-loading-box{
     display:none;
     width:100%;
@@ -90,6 +92,26 @@
 .automizy-select.automizy-loading .automizy-select-loading-box{
     display:block;
 }
+
+.automizy-select .automizy-select-empty-box{
+    display:none;
+    color: #ff0000;
+    padding: 6px 0 0 6px;
+}
+.automizy-select.automizy-empty-select{
+    border:none;
+    background-color:transparent;
+    cursor:auto;
+}
+.automizy-select.automizy-empty-select .automizy-select-table{
+    display:none;
+}
+.automizy-select.automizy-empty-select .automizy-select-empty-box{
+    display:block;
+}
+
+
+
 .automizy-select.automizy-loading .automizy-select-table{
     display:none;
 }
