--- a/src/styles/form.css
+++ b/src/styles/form.css
@@ -3,11 +3,6 @@
 }
 
 .automizy-form .automizy-form-subtitle {
-    color: #555555;
-    font-size: 15px;
-    background-color: #e1ead5;
-    padding: 10px 18px 10px 18px;
-    margin-bottom: 18px;
 }
 
 .automizy-content .automizy-form .automizy-form-subtitle {
@@ -20,7 +15,7 @@
 
 .automizy-form .automizy-form-buttons {
     text-align: center;
-    height: 30px;
+    min-height: 30px;
 }
 
 .automizy-form .automizy-form-buttons .automizy-button {
