--- a/src/styles/table.css
+++ b/src/styles/table.css
@@ -241,7 +241,8 @@
     position: relative;
     white-space: nowrap;
     vertical-align: middle;
-    color:#918D99;
+    color:#555a60;
+    font-weight: 400;
 }
 .automizy-table > tbody > tr > td.automizy-main-cell{
 }
@@ -485,6 +486,10 @@
     padding:0;
 }
 
+.automizy-table-steppage-box .automizy-table-steppage-box-wrapper .automizy-table-pagenumber-box{
+    border-right: 1px solid #f46a1f !important;
+}
+
 .automizy-table-pagenumber{
     width: 100%;
     margin: 0;
@@ -502,7 +507,7 @@
 .automizy-table-steppage-box .automizy-table-steppage-box-wrapper .automizy-table-step-element .automizy-table-pagenumber:focus{
     background-color: #ffffff;
     color: #918D99;
-    outline-color: #f46a1f;
+    outline: none;
 }
 
 .automizy-table-pagenumber::-webkit-outer-spin-button,
