--- a/src/styles/select.css
+++ b/src/styles/select.css
@@ -81,6 +81,13 @@
     color: #777777;
 }
 
+.automizy-select-search-box{
+    padding: 8px 8px 4px 8px;
+}
+.automizy-select-search-box .automizy-input{
+    padding: 0;
+}
+
 .automizy-select .automizy-select-loading-box{
     display:none;
     width:100%;
