--- a/src/styles/select.css
+++ b/src/styles/select.css
@@ -89,8 +89,8 @@
     color: #777777;
 }
 .automizy-select-search-box{
-    padding: 8px 8px 4px 8px;
 }
+
 .automizy-select-search-box .automizy-input{
     padding: 0;
 }
@@ -100,18 +100,38 @@
     width:100%;
     height:100%;
     background-color:#ffffff;
-    padding: 6px 0 0 6px;
+    padding: 8px;
     box-sizing: border-box;
 }
 .automizy-select.automizy-loading .automizy-select-loading-box{
     display:block;
 }
+
+.automizy-select .automizy-select-empty-box{
+    display:none;
+    color: #da4b50;
+    padding: 8px;
+}
+.automizy-select.automizy-empty-select{
+    border-color: #da4b50;
+    cursor:auto;
+}
+.automizy-select.automizy-empty-select .automizy-select-table{
+    display:none;
+}
+.automizy-select.automizy-empty-select .automizy-select-empty-box{
+    display: inline-block;
+    text-align: left;
+    vertical-align: middle;
+    padding: 8px;
+}
+
 .automizy-select.automizy-loading .automizy-select-table{
     display:none;
 }
 
 
-.automizy-select-option-box{   /*option box*/
+.automizy-select-option-box-widget{   /*option box widget*/
     position:absolute;
     z-index:16777270;
     border:1px solid rgba(0,0,0,0.15);
@@ -122,13 +142,11 @@
     background-color:#ffffff;
     margin:1px 0 0 0;
     box-sizing: border-box;
+    padding: 10px
+}
+.automizy-select-option-box{   /*option box*/
     overflow: auto;
     max-height: 250px;
-    padding: 5px 10px;
-}
-
-.automizy-select-option-box-widget{
-    position: absolute;
 }
 
 .automizy-select-option-table{  /*option box content table*/
