--- a/src/styles/form.css
+++ b/src/styles/form.css
@@ -3,6 +3,7 @@
 }
 
 .automizy-form .automizy-form-subtitle {
+    margin-bottom: 10px;
 }
 
 .automizy-content .automizy-form .automizy-form-subtitle {
