--- a/src/styles/form.css
+++ b/src/styles/form.css
@@ -63,9 +63,8 @@
 
 .automizy-form .automizy-form-group-switch {
     padding: 10px 15px;
-    margin: 0;
+    margin: 1px 0;
     color: #555a60;
-    background: transparent;
     border: none;
     cursor: pointer;
     width: 100%;
@@ -74,9 +73,22 @@
     font-size: 16px;
     font-weight: 500;
     text-align: left;
+    border: 1px solid rgb(240, 242, 246);
+    background-color: #FEFEFF;
+    border-radius: 3px;
 }
 
-.automizy-form .automizy-form-group-switch.active{
-    border-bottom: 1px solid rgba(158, 173, 195, 0.156863);
+.automizy-form .automizy-form-group-switch:hover,
+.automizy-form .automizy-form-group-switch.active:hover{
+    background-color: #f3f3f9;
+    color: #2b2f33;
+    border-color: #DCD8E7;
+    -webkit-transition: border-color,color,background-color 0.3s;
+    transition: border-color,color,background-color 0.3s;
+}
 
+.automizy-form .automizy-form-group-switch.active {
+    background-color: #FEFEFF;
+    color: #2b2f33;
+    border-color: #DCD8E7;
 }
