--- a/src/styles/input.css
+++ b/src/styles/input.css
@@ -26,7 +26,7 @@
     border-radius: 3px;
     outline: none;
     max-width: 100%;
-    font-size: 13px;
+    font-size: 14px;
     display: block;
     float: none;
     background: #fff;
@@ -43,6 +43,8 @@
 
 .automizy-input.automizy-skin-simple-automizy textarea {
     height: 80px;
+    resize: none;
+    height: 100px;
 }
 
 .automizy-input.automizy-skin-simple-automizy input[type='text']:focus,
@@ -75,7 +77,7 @@
     padding-top: 7px;
     font-weight: 700;
     display: inline-block;
-    font-size: 13px;
+    font-size: 14px;
     overflow-x: hidden;
     color: #3e4855;
     line-height: 1.42857143;
