--- a/src/automizy.css
+++ b/src/automizy.css
@@ -10,3 +10,4 @@
 @import url("styles/iphoneStyle.css");
 @import url("styles/select.css");
 @import url("styles/icons.css");
+@import url("styles/alert.css");
