--- a/src/styles/select.css
+++ b/src/styles/select.css
@@ -28,6 +28,11 @@
 .automizy-select.automizy-active{
      border-color: #3da6ff;
 }
+
+.automizy-select.automizy-disabled{
+    color: #333333;
+    opacity:0.65;
+}
 .automizy-select .automizy-select-table{
     width:100%;
     height:100%;
@@ -149,7 +154,6 @@
 .automizy-select-option-box{   /*option box*/
     overflow: auto;
     max-height: 250px;
-    padding: 5px 10px;
 }
 
 .automizy-select-option-table{  /*option box content table*/
