--- a/src/styles/input.css
+++ b/src/styles/input.css
@@ -118,6 +118,10 @@
     margin:0 0 3px 0;
     font-family:Arial, Helvetica, sans-serif;
 }
+.automizy-input label.new-row{
+    width:100%;
+    display:block;
+}
 .automizy-input .automizy-input-box-error{
     display:none;
     /*margin:0 0 0 270px;*/
