--- a/src/styles/input.css
+++ b/src/styles/input.css
@@ -166,6 +166,8 @@
 .automizy-input label.new-row{
     width:100%;
     display:block;
+    padding-left: 0;
+    text-align: left;
 }
 
 /*Validation*/
