--- a/src/styles/iphoneStyle.css
+++ b/src/styles/iphoneStyle.css
@@ -1,5 +1,3 @@
-@import url("https://fonts.googleapis.com/css?family=Roboto");
-
 
 .iPhoneCheckContainer {
     -webkit-transform:translate3d(0,0,0);
@@ -22,7 +20,6 @@
     font-size: 17px;
     line-height: 17px;
     font-weight: bold;
-    font-family: 'Roboto', sans-serif;
     cursor: pointer;
     display: block;
     height: 27px;
@@ -129,7 +126,7 @@ label.iPhoneCheckLabelOff span {
     border-bottom-right-radius: 3px;
     box-sizing: border-box;
     border-radius: 3px;
-    border: 1px solid rgb(204,204,204);
+    border: 1px solid #cccccc
 }
 
 .iPhoneCheckHandleCenter {
@@ -139,7 +136,7 @@ label.iPhoneCheckLabelOff span {
 }
 
 .off .iPhoneCheckHandleCenter{
-    color: #000000;
+    color: #555A63;
 }
 
 .off .iPhoneCheckHandle{
@@ -147,8 +144,17 @@ label.iPhoneCheckLabelOff span {
 }
 
 .iPhoneCheckHandleRight, .iPhoneCheckHandleCenter{
-    background-color: rgb( 140, 181, 92 );
+    background-color: #4CAF50;
+    border-color: #3fa243;
+    transition: background-color, border-color 0.2s;
+    -webkit-transition: background-color, border-color 0.2s;
+    -moz-transition: background-color, border-color 0.2s;
+    text-transform: uppercase;
 }
 .iPhoneCheckContainer.off .iPhoneCheckHandle, .iPhoneCheckContainer.off .iPhoneCheckHandleRight, .iPhoneCheckContainer.off .iPhoneCheckHandleCenter{
-    background-color: rgb( 217, 217, 217 );
+    background-color: #FFFFFF;
+    border-color: #cccccc;
+    border-top-right-radius: 0;
+    border-bottom-right-radius: 0;
+    border-right: none;
 }
